--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -64,6 +64,9 @@ p {
 div {
   font-family: "Lato", sans-serif;
 }
+span {
+  font-family: "Lato", sans-serif;
+}
 .truncate {
   white-space: nowrap;
   overflow: hidden;
@@ -79,7 +82,6 @@ div {
 }
 button span {
   font-size: 14px;
-  font-family: "Lato", sans-serif;
   font-weight: bold;
 }
 .status-icon {
